# py-omni

./: README.md  pyproject.toml
src/pyomni/: client.py  exceptions.py  old_client.py
src/pyomni/core/: __init__.py  applescript.py  folder_ops.py  inbox_task.py  resolvers.py  task_ops.py  task_parsers.py  task_scripts.py
src/pyomni/models/: task.py
tests/: test_create.py  test_folders.py  test_projects.py  test_smoke.py  test_subfolders.py  test_tasks.py
